[package]
name = "nro-rs"
version = "0.1.0"
edition = "2021"
authors = ["jozz024", ]
description = "An Nintendo Relocatable Object parsing library, written in Rust"
readme = "README.md"
repository = "https://github.com/jozz024/nro-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nro"

[dependencies]
binrw = "0.10.0"